demo-repo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: default
  labels:
    app: demo-app
spec:
  type: LoadBalancer # MEDIUM: service exposes ports via LoadBalancer
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
